--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@kubb/cli": "^3.10.15",
     "@kubb/core": "^3.10.15",
     "@kubb/plugin-oas": "^3.10.15",
+    "@kubb/plugin-ts": "^3.10.15",
     "typescript": "^5.8.3"
   }
 }
